Archive2/8a/c61ac5624f5531/output
main.cpp: In function 'void test(MD*)':
main.cpp:16:21: error: 'const class D' has no member named 'fn'
         MD val(val->fn());
                     ^
